--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  max-width: 500px;
+  border-radius: 10px;
+  max-height: 443px;
+  min-height: 391px;
+  margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #f5f5f5;
 }
-
-.App-link {
-  color: #61dafb;
+.title {
+  font-size: 40px;
+  margin: 0;
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.info {
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 52px;
+  text-align: center;
+}
+/* change only main size  */
+@media only screen and (max-width: 500px) {
+  main {
+    width: 80vw;
+    height: 400px;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media only screen and (max-width: 355px) {
+  main {
+    width: 80vw;
+    height: 300px;
+  }
+}
+/* die-container */
+.die-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+  padding: 0 42px;
+  gap: 19px;
+}
+button {
+  font-weight: 700;
+  background-color: #5035ff;
+  font-size: 28px;
+  width: 169px;
+  height: 47px;
+  border-radius: 4px;
+  border: none;
+  align-self: center;
+  margin-top: 35px;
+  text-align: center;
+  color: #ffffff;
+}
+@media only screen and (max-width: 541px) {
+  .die-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .die:nth-child(9) {
+    grid-column: 2/3;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .title {
+    font-size: 24px;
+  }
+  .info {
+    margin-bottom: 12px;
+  }
+  .die-container {
+    padding: 0;
+  }
+  .main {
+    padding: 0 17px;
+  }
+}
+@media only screen and (max-width: 377px) {
+  .die-container {
+    gap: 20px;
+  }
+  .die {
+    font-size: 24px !important;
+    width: 34px !important;
+    height: 34px !important;
   }
 }
